Fix navbar on mobile

--- a/client/core/css/index.styl
+++ b/client/core/css/index.styl
@@ -414,7 +414,15 @@ label.checkbox.inline
   margin-left: 5px !important
   margin-top: 0px
 
-@media (min-width: 767px)
+@media (max-width: 767px)
+  .navbar-brand
+    height: initial
+    padding: 15px 15px !important
+    float: none
+  .nav.navbar-nav
+    margin: 0 -15px
+
+@media (min-width: 768px)
   .manual-pairings .col-sm-4,
   .manual-pairings .col-sm-8
     overflow-y: auto
